2003-08-15  Mikael Hallendal  <micke@imendio.com>

	* configure.in: 
        - Applied patch from Steve Chaplin that fixes the CFLAGS.
        - Fixes bug #118984

        * src/yelp-main.c:
        (main_restore_session): Return FALSE, otherwise we'll try to start Yelp
          from the session over and over again. Reported by Jody earlier.

2003-07-01  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS

2003-01-20  Glynn Foster  <glynn.foster@sun.com>

	* Release 2.2.3

	* configure.in: Bumped version to 2.2.3

	* NEWS: Update for 2.2.3

2003-06-25  Glynn Foster   <glynn.foster@sun.com>

	* stylesheets/l10n.xml: Add more support for other 
	languages.

2003-06-25  Glynn Foster   <glynn.foster@sun.com>

	* stylesheets/l10n.xml: Update italian translation for 
	Next/Previous/Content descriptions.

2003-06-13  Mikael Hallendal  <micke@imendio.com>

        * *: Updated my contact information
	
2003-06-05  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: (window_about_cb): 
	- Reverted string change reported by Christian Rose. SORRY!

2003-06-04  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-scrollkeeper.c: (scrollkeeper_parse_toc_section):
	- fixed leak found by Kjartan.

	* src/yelp-reader.c: 
	- style fixes
	- fixes memory leaks found and patched by Narayana Pattipati
	- fixes #110572  
	
2003-06-03  Mikael Hallendal  <micke@codefactory.se>

        * src/yelp-window.c: (window_about_cb): 
	- If About window is already showing, don't create another one.
	  Patch by Steve Chaplin, fixes #113906

2003-06-03  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-content.c: (content_reader_finished_cb):
	- Use gtp_tree_view_expand_to_path to expand the tree instead of callin
	  gtk_tree_view_expand_path on all parents. Fixes #113977

2003-05-06  Paul Duffy <dubhthach@frink.nuigalway.ie>

        * configure.in: Added "ga" to ALL_LINGUAS

2003-05-05  Danilo Šegan  <dsegan@gmx.net>
