@@ -1,5 +1,5 @@
 <oaf_info>
-  <oaf_server iid="OAFIID:GNOME_Yelp_Factory" type="exe" location="yelp-base">
+  <oaf_server iid="OAFIID:GNOME_Yelp_Factory" type="exe" location="yelp">
     <oaf_attribute name="repo_ids" type="stringv">
       <item value="IDL:GNOME/GenericFactory:1.0"/>
     </oaf_attribute>
