@@ -1,6 +1,13 @@
 2003-08-15  Mikael Hallendal  <micke@imendio.com>
 
-	* configure.in: 
+        * src/GNOME_Yelp.server.in: Replaced yelp-base for yelp. Not sure what
+          should be in there really... Might fix bug #119764
+ 
+        * src/yelp-window.c: (window_init), (window_configure_cb):
+        - Save size from last window. Patch by Shaun McCance.
+        - Fixes bug #90451
+
+        * configure.in: 
         - Applied patch from Steve Chaplin that fixes the CFLAGS.
         - Fixes bug #118984
 
